# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-10-25 15:27:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-5

    Summary:
      Merged local changes to Wash
    Revision:
      missingh--head--0.5--patch-5


    modified files:
     ChangeLog libsrc/MissingH/Wash/Mail/Email.hs
     libsrc/MissingH/Wash/Mail/EmailConfig.hs
     libsrc/MissingH/Wash/Mail/HeaderField.hs
     libsrc/MissingH/Wash/Mail/MIME.hs
     libsrc/MissingH/Wash/Mail/MailParser.hs
     libsrc/MissingH/Wash/Mail/Message.hs
     libsrc/MissingH/Wash/Utility/Auxiliary.hs
     libsrc/MissingH/Wash/Utility/Base32.hs
     libsrc/MissingH/Wash/Utility/Base64.hs
     libsrc/MissingH/Wash/Utility/FileNames.hs
     libsrc/MissingH/Wash/Utility/Hex.hs
     libsrc/MissingH/Wash/Utility/ISO8601.hs
     libsrc/MissingH/Wash/Utility/IntToString.hs
     libsrc/MissingH/Wash/Utility/JavaScript.hs
     libsrc/MissingH/Wash/Utility/Locking.hs
     libsrc/MissingH/Wash/Utility/QuotedPrintable.hs
     libsrc/MissingH/Wash/Utility/RFC2047.hs
     libsrc/MissingH/Wash/Utility/RFC2279.hs
     libsrc/MissingH/Wash/Utility/RFC2397.hs
     libsrc/MissingH/Wash/Utility/Shell.hs
     libsrc/MissingH/Wash/Utility/SimpleParser.hs
     libsrc/MissingH/Wash/Utility/URLCoding.hs
     libsrc/MissingH/Wash/Utility/Unique.hs


2004-10-25 15:25:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-4

    Summary:
      Applied local changes to Hsemail (import lines)
    Revision:
      missingh--head--0.5--patch-4


    modified files:
     COPYRIGHT ChangeLog libsrc/MissingH/Hsemail/Rfc2234.hs
     libsrc/MissingH/Hsemail/Rfc2821.hs
     libsrc/MissingH/Hsemail/Rfc2822.hs


2004-10-25 15:20:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-3

    Summary:
      Merged in upstreams for washngo, hsemail
    Revision:
      missingh--head--0.5--patch-3

    Patches applied:
    